--- a/public/global.css
+++ b/public/global.css
@@ -12,6 +12,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	margin: 0;
 	padding: 0;
+	background: rgb(22, 22, 22);
 }
 
 a {
